--- a/templates/index.html
+++ b/templates/index.html
@@ -317,6 +317,8 @@
             }
         }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4259046470473099"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col">
     <div class="container mx-auto px-4 py-8">
@@ -422,5 +424,17 @@
             </div>
         </div>
     </div>
+<!-- Iklan disisipkan di sini -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4259046470473099"
+     data-ad-slot="1234567890"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 </body>
 </html>
