--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-4259046470473099">
     <title>LinkLite - URL Shortener</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
